--- a/branches.html
+++ b/branches.html
@@ -11,6 +11,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="mlroylogo.webp" alt="M.L. Roy & Co. Logo" height="60"/>
+                <span>M.L. Roy & Co.</span>
+            </div>
+            <div class="menu-icon" id="menu-icon">
+                &#9776;
+            </div>
+            <ul class="nav-links" id="nav-links">
+                <li><a href="">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="">Our Branches</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
     <section id="branches" class="branches-section">
         <h2>Our Branches</h2>
         <div class="branches-container">
@@ -42,5 +59,6 @@
             </div>
         </div>
     </section>
-    
+    <script src="branch.js">
+    </script>
 </body>
