--- a/branches.html
+++ b/branches.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M. L. Roy and Co.</title>
+    <title>Branches</title>
     <link rel="stylesheet" href="style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,16 +15,16 @@
         <nav class="navbar">
             <div class="logo">
                 <img src="mlroylogo.webp" alt="M.L. Roy & Co. Logo" height="60"/>
-                <span>M.L. Roy & Co.</span>
+                <span>M. L. Roy & Co.</span>
             </div>
             <div class="menu-icon" id="menu-icon">
                 &#9776;
             </div>
             <ul class="nav-links" id="nav-links">
-                <li><a href="">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="">Our Branches</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="branches.html">Our Branches</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
