--- a/index.html
+++ b/index.html
@@ -15,18 +15,22 @@
         <nav class="navbar">
             <div class="logo">
                 <img src="mlroylogo.webp" alt="M.L. Roy & Co. Logo" height="60"/>
-                <span>M.L. Roy & Co.</span>
+                <span>M. L. Roy & Co.</span>
             </div>
             <div class="menu-icon" id="menu-icon">
                 &#9776;
             </div>
             <ul class="nav-links" id="nav-links">
-                <li><a href="">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="">Our Branches</a></li>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="branches.html">Our Branches</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
+        <div class="container">
+            <h2 class="upper">The Most Luxarious Bathroom Brand </h2>
+            <h1 class="animated-title">M. L. Roy & Co.</h1>
+        </div>
     </header>
     <main id="home">
     </main>
