--- a/products.html
+++ b/products.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Products</title>
     <link rel="stylesheet" href="style1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <div class="logo">
                 <img src="mlroylogo.webp" alt="M.L. Roy & Co. Logo" height="60"/>
-                <span>M.L. Roy & Co.</span>
+                <span>M. L. Roy & Co.</span>
             </div>
             <div class="menu-icon" id="menu-icon">
                 &#9776;
