--- a/branches.html
+++ b/branches.html
@@ -34,28 +34,32 @@
             <div class="branch-item">
                 <img src="m-l-roy-and-co-salt-lake-kolkata-bathroom-fitting-dealers-1b1ax8v.jpg" alt="Branch 1" class="branch-img">
                 <h3>M. L. Roy & Co., Salt Lake</h3>
+                <div class="map-container">
                 <iframe 
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7366.942392461823!2d88.4073998586914!3d22.598873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0275e6ca5c46d1%3A0x4b904f49463ed1cb!2sM.%20L.%20Roy%20%26%20Co.!5e0!3m2!1sen!2sin!4v1731759328148!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
-                    width="100%" 
-                    height="300" 
+                    width="600" 
+                    height="450" 
+                    style="border:0;" 
+                    allowfullscreen="" 
+                    loading="lazy" 
+                    referrerpolicy="no-referrer-when-downgrade">
+                </iframe>
+                </div>
+            </div>
+            <div class="branch-item">
+                <img src="m-l-roy-co-kankurgachi-kolkata-bathroom-fitting-dealers-gett2xk439.jpg" alt="Branch 2" class="branch-img">
+                <h3>M. L. Roy & Co., Kankurgachi</h3>
+                <div class="map-container">
+                <iframe 
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.040356968137!2d88.38778937566467!3d22.57759387948817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02766fbd0b0e85%3A0x59059b92cf0ccbb5!2sM.L%20ROY%20%26%20COMPANY!5e0!3m2!1sen!2sin!4v1731759158618!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
+                    width="600" 
+                    height="450" 
                     style="border:0;" 
                     allowfullscreen="" 
                     loading="lazy" 
                     referrerpolicy="no-referrer-when-downgrade">
                 </iframe>
             </div>
-            <div class="branch-item">
-                <img src="m-l-roy-co-kankurgachi-kolkata-bathroom-fitting-dealers-gett2xk439.jpg" alt="Branch 2" class="branch-img">
-                <h3>M. L. Roy & Co., Kankurgachi</h3>
-                <iframe 
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3684.040356968137!2d88.38778937566467!3d22.57759387948817!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a02766fbd0b0e85%3A0x59059b92cf0ccbb5!2sM.L%20ROY%20%26%20COMPANY!5e0!3m2!1sen!2sin!4v1731759158618!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
-                    width="100%" 
-                    height="300" 
-                    style="border:0;" 
-                    allowfullscreen="" 
-                    loading="lazy" 
-                    referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
             </div>
         </div>
     </section>
