--- a/products.html
+++ b/products.html
@@ -45,26 +45,234 @@
             </div>
             <div class="catalogue-item" data-modal="modal2">
                 <div class="catalogue-bg" style="background-image: url('basin1.jpg');"></div>
-                <h3>Basin</h3>
+                <h3>Basins</h3>
             </div>
             <div class="catalogue-item" data-modal="modal3">
                 <div class="catalogue-bg" style="background-image: url('toilets1.jpg');"></div>
-                <h3>Pan</h3>
+                <h3>Pans</h3>
             </div>
             <div class="catalogue-item" data-modal="modal4">
                 <div class="catalogue-bg" style="background-image: url('showers2.jpg');"></div>
-                <h3>Shower</h3>
+                <h3>Showers</h3>
             </div>
             <div class="catalogue-item" data-modal="modal5">
                 <div class="catalogue-bg" style="background-image: url('mirror.jpg');"></div>
-                <h3>Mirror</h3>
+                <h3>Mirrors</h3>
             </div>
         </div>
         <div id="modal1" class="modal">
             <div class="modal-content">
                 <span class="close" data-close="modal1">&times;</span>
-                <h2>Catalogue 1</h2>
-                <p>Price and items chart for Catalogue 1 goes here.</p>
+                <h2>Taps</h2>
+                <p>Price and items chart for Taps</p>
+                <section id="products">
+                    <div class="catalogue-container">
+                        <div class="scrollable-catalogue">
+                            <div class="catalogue-grid">
+                                <!-- Catalogue Item 1 -->
+                                <div class="catalogue-item">
+                                    <img src="tap1.jpg" alt="Product 1" class="product-image">
+                                    <h3 class="product-name">Product Name 1</h3>
+                                    <p class="product-price">₹500</p>
+                                </div>
+                                <!-- Catalogue Item 2 -->
+                                <div class="catalogue-item">
+                                    <img src="tap2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <!-- Add more items -->
+                                <div class="catalogue-item">
+                                    <img src="tap3.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <div class="catalogue-item">
+                                    <img src="tap4.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div id="modal2" class="modal">
+            <div class="modal-content">
+                <span class="close" data-close="modal2">&times;</span>
+                <h2>Basins</h2>
+                <p>Price and items chart for Basins</p>
+                <section id="products">
+                    <div class="catalogue-container">
+                        <div class="scrollable-catalogue">
+                            <div class="catalogue-grid">
+                                <!-- Catalogue Item 1 -->
+                                <div class="catalogue-item">
+                                    <img src="product1.jpg" alt="Product 1" class="product-image">
+                                    <h3 class="product-name">Product Name 1</h3>
+                                    <p class="product-price">₹500</p>
+                                </div>
+                                <!-- Catalogue Item 2 -->
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <!-- Add more items -->
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div id="modal3" class="modal">
+            <div class="modal-content">
+                <span class="close" data-close="modal3">&times;</span>
+                <h2>Pans</h2>
+                <p>Price and items chart for Pans</p>
+                <section id="products">
+                    <div class="catalogue-container">
+                        <div class="scrollable-catalogue">
+                            <div class="catalogue-grid">
+                                <!-- Catalogue Item 1 -->
+                                <div class="catalogue-item">
+                                    <img src="product1.jpg" alt="Product 1" class="product-image">
+                                    <h3 class="product-name">Product Name 1</h3>
+                                    <p class="product-price">₹500</p>
+                                </div>
+                                <!-- Catalogue Item 2 -->
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <!-- Add more items -->
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div id="modal4" class="modal">
+            <div class="modal-content">
+                <span class="close" data-close="modal4">&times;</span>
+                <h2>Showers</h2>
+                <p>Price and items chart for Showers</p>
+                <section id="products">
+                    <div class="catalogue-container">
+                        <div class="scrollable-catalogue">
+                            <div class="catalogue-grid">
+                                <!-- Catalogue Item 1 -->
+                                <div class="catalogue-item">
+                                    <img src="product1.jpg" alt="Product 1" class="product-image">
+                                    <h3 class="product-name">Product Name 1</h3>
+                                    <p class="product-price">₹500</p>
+                                </div>
+                                <!-- Catalogue Item 2 -->
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <!-- Add more items -->
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+        <div id="modal5" class="modal">
+            <div class="modal-content">
+                <span class="close" data-close="modal5">&times;</span>
+                <h2>Mirrors</h2>
+                <p>Price and items chart for Mirrors</p>
+                <section id="products">
+                    <div class="catalogue-container">
+                        <div class="scrollable-catalogue">
+                            <div class="catalogue-grid">
+                                <!-- Catalogue Item 1 -->
+                                <div class="catalogue-item">
+                                    <img src="product1.jpg" alt="Product 1" class="product-image">
+                                    <h3 class="product-name">Product Name 1</h3>
+                                    <p class="product-price">₹500</p>
+                                </div>
+                                <!-- Catalogue Item 2 -->
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <!-- Add more items -->
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                                <div class="catalogue-item">
+                                    <img src="product2.jpg" alt="Product 2" class="product-image">
+                                    <h3 class="product-name">Product Name 2</h3>
+                                    <p class="product-price">₹750</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </div>
     </section>
