--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
+        <div class="classy"></div>
         <div class="container">
             <h2 class="upper">The Most Luxarious Bathroom Brand </h2>
             <h1 class="animated-title">M. L. Roy & Co.</h1>
