--- a/branches.html
+++ b/branches.html
@@ -27,6 +27,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
+        <div class="classy"></div>
     </header>
     <section id="branches" class="branches-section">
         <h2>Our Branches</h2>
