--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
+        <div class="classy"></div>
         <script src="contact.js">
     </script>
     </header>
