--- a/products.html
+++ b/products.html
@@ -27,6 +27,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
+        <div class="classy"></div>
     </header>
     <main id="home">
     </main>
